--- a/src/components/item/item.css
+++ b/src/components/item/item.css
@@ -8,6 +8,8 @@
 
 .item-list .list-group-item {
     cursor: pointer;
+    padding: 13px 20px;
+    font-size: 18px;
 }
 
 .item-list .list-group-item:hover {
