feat: fixed bird details (disable click in loading case, small fixes).

--- a/src/components/item/item.css
+++ b/src/components/item/item.css
@@ -12,6 +12,10 @@
     font-size: 18px;
 }
 
+.disabled-item-list {
+    cursor: wait!important;
+    background-color: #444!important;
+}
 .item-list .list-group-item:hover {
     background-color: #444;
 }
